--- a/gradle.properties
+++ b/gradle.properties
@@ -17,9 +17,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_NAME=2.2.3-non-native
+VERSION_NAME=2.2.4-bandlab-fix
 VERSION_CODE=24
-GROUP=com.yalantis
+GROUP=com.github.yalantis
 
 POM_DESCRIPTION=Android Library for cropping images
 POM_URL=https://github.com/Yalantis/uCrop
